--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
 @font-face {
   font-family: 'KaushanScript';
   font-style: normal;
-  src: local('KaushanScript') font-url('/assets/KaushanScript-Regular.otf') format('opentype');
+  src: font-url('/assets/KaushanScript-Regular.otf') format('opentype');
 }
 
 #body {
