edit board form

--- a/app/assets/templates/boards/new.jst.ejs
+++ b/app/assets/templates/boards/new.jst.ejs
@@ -1,7 +1,7 @@
 <form role="form">
   <div class="tile board-tile" id="new-board-tile">
     <h1 class="board-header" id="board-title"><input class="form-control" type="text" name="board[title]" value="" id="title" placeholder="Title" autofocus></h1>
-    <textarea class="form-control"  name="board[description]" id="description" placeholder="A short description or whatever."></textarea>
+    <textarea class="form-control"  name="board[description]" id="description" placeholder="Optional short description."></textarea>
     <button id="create-board" type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Board</button>
   </div>
 </form>
