--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,14 +58,30 @@
   border-radius: 10px;
   padding: 20px;
   
+  position: relative;
+  
   .form-control {
     border: none;
   }
   
+  .btn {
+    background-image: none !important;
+  }
+}
+
+#guest-spacer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 20px;
 }
 
 .user-form-links {
   margin: 20px 0;
+  
+  .user-form-link {
+    margin: 10px 0;
+  }
 }
 
 
