--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,28 +3,59 @@
     <h1>Sign Up</h1>
     
     <div class="form-box">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name) ) do |f| %>
-        <%= devise_error_messages! %>
+      <form accept-charset="UTF-8" action="/users" class="new_user" id="new_user" method="post">
+        <div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><%= form_auth %></div>
 
-        <div class="form-group"><%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
+          <div class="form-group"><label for="user_email">Email</label>
+          <input autofocus="autofocus" class="form-control" id="user_email" name="user[email]" type="email" value="<%= resource.email %>"></div>
 
-        <div class="form-group"><%= f.label :username %>
-        <%= f.text_field :username, autofocus: true, class: "form-control" %></div>
+          <div class="form-group"><label for="user_username">Username</label>
+          <input autofocus="autofocus" class="form-control" id="user_username" name="user[username]" type="text" value="<%= resource.username %>"></div>
 
-        <div class="form-group"><%= f.label :password %>
-          <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
+          <div class="form-group"><label for="user_password">Password</label>
+            <input autocomplete="off" class="form-control" id="user_password" name="user[password]" type="password"></div>
 
-        <div class="form-group"><%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
+          <div class="form-group"><label for="user_password_confirmation">Password confirmation</label>
+            <input autocomplete="off" class="form-control" id="user_password_confirmation" name="user[password_confirmation]" type="password"></div>
 
-        <div><%= f.submit "Sign Up", class: "btn btn-primary"%></div>
-      <% end %>
+          <div>
+            <input class="btn btn-primary" name="commit" type="submit" value="Sign Up">
+          </div>
+          
+      </form>
+      
+      <div id="guest-spacer">
+        <button id="guest-login" class="btn btn-info">Sign In as Guest</button>
+      </div>
+      
     </div>
-
+  
     <div class="user-form-links">
       <%= render "devise/shared/links" %>
     </div>
   
   </div>  
 </div>
+
+
+
+<script type="text/javascript">
+$('#guest-login').click( function (event) {
+  var data = {
+    user: {
+      email: 'guest@missmaggiemo.com',
+      password: 'testtest'
+    }
+  };
+  
+  $.ajax({
+    url: "<%= new_user_session_url %>",
+    method: 'post',
+    data: data,
+    success: function (resp) {
+      window.location = "/";
+    }
+  })
+});
+</script>
+
